# pandoc-revealjs-clean

./: 00_meta.md  10_body.md  README.md  custom.css  custom.revealjs  example.md  pandoc-compose.yaml  pyproject.toml  setup.sh  slides.md
