[tool.poetry]
name = "pandoc-revealjs-clean"
version = "0.1.0"
description = ""
authors = ["lassepe <lasse.peters@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
pandoc-compose = "^0.0.7"
dvc = {extras = ["gdrive"], version = "^2.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
